<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.android02layout.StudentActivity">


    <TableLayout
        android:layout_width="395dp"
        android:layout_height="587dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_name" />

            <EditText
                android:id="@+id/st_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"

                android:inputType="textPersonName"
                android:text="@string/txt_kim" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_math" />

            <EditText
                android:id="@+id/st_math"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"

                android:inputType="textPersonName"
                android:text="@string/txt_50" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_eng" />

            <EditText
                android:id="@+id/st_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"

                android:inputType="textPersonName"
                android:text="@string/txt_80" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_kor" />

            <EditText
                android:id="@+id/st_kor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"

                android:inputType="textPersonName"
                android:text="@string/txt_100" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <Button
                android:id="@+id/st_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/btn_insertOK" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
